--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Aquí debe ir el contenido HTML
+<html>
+	<head>
+		<meta charset="utf-8"/>
+		<title>Inicio</title>
+	</head>
+	<body>
+		<h1>Bienvenidos</h1>
+	</body>
+</html>
